add GET hosts handler
